static/css/index.css
#leftbar {
  width: 300px;

  margin-top: 5px;
  margin-left: 5px;
  padding-bottom: 10px;
  margin-right: -315px;
  display: table-cell;
}

#leftbar .box {
  background: white;
  margin: 5px;
}

#leftbar ul {
  padding: 0;
  margin: 0;
}

#leftbar h2 {
  font-weight: bold;
  font-size: 16pt;
  padding: 5px;
  margin: 0;
}

#leftbar h3 {
  font-weight: bold;
  font-size: 12pt;
  padding: 0;
  margin: 0;
}

#leftbar li {
  display: block;
  padding: 5px;
}

#leftbar iframe {
  width: 100%;
  height: 280px;
  border: 0;
  padding: 0;
  margin: 0;
}

#body {
}

#footer {
  position: fixed;
  bottom: 15;
  width: 100%;
  border-spacing: 20px;
  display: table-row;
}

#footer .box {
  color: white;
  width: 30%;
  padding: 20px;
  display: table-cell;
}

#footer h2 {
  font-weight: bold;
  font-size: 22pt;
  padding: 0;
  margin: 0;
}

#footer .box {
  text-align: center;
}

#footer .minor {
  font-size: 12pt;
}

#footer #attend {
  background: #009e0f;
  opacity: 0.9;
}
#footer #sponsor {
  background: #cf2a27;
  opacity: 0.9;
}
#footer #speak {
  background: #2b78e4;
  opacity: 0.9;
}

#attend:hover {
  cursor: pointer;
}

#twitter {
  display: table-cell
}

.eventitem {
  display: table
}

.eventitem .start {
  display: table-row;
}
.eventitem .editlink {
  display: table-cell;
  float: right;
}

.eventitem .eventname {
  display: table-cell;
}

.eventitem .event-icons {
  display: table-cell;
  float: right;
}

#twitter {
  width: 200px;
}

#twitter-show {
  text-align: center;
}

#twitter-show a {
  font-size: 80%;
  color: #085258;
  text-decoration: none;
}

#youtube {
  background: black;
  padding: 5px;
  min-width: 200px;
}
#youtube-wrapper {
  position: relative;
  height: 280px;
}
#youtube-wrapper div {
  width: 200px;
  height: 115px;
  float: left;
}

